# MonkeyCamSP

./: .gitignore  README.md  app.py  main.py  names.txt  pyproject.toml  ui.py
