[project]
name = "monkeycamsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "opencv-python>=4.13.0.92",
    "python-dateutil>=2.9.0.post0",
    "streamlit>=1.54.0",
]

[project.scripts]
monkeycamsp = "app:main"

[tool.setuptools]
py-modules = ["app"]
